[gd_scene load_steps=4 format=3 uid="uid://c7s5w5g5g5g5"]

[ext_resource type="Script" uid="uid://363tb73wf8j1" path="res://스테이지3/boss.gd" id="1_bdi88"]
[ext_resource type="Texture2D" uid="uid://cvtekje15yj4b" path="res://스테이지3/Img/driller.png" id="2_1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(344, 158.07422)

[node name="Boss" type="StaticBody2D"]
collision_layer = 8
collision_mask = 4
script = ExtResource("1_bdi88")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(9, 23)
shape = SubResource("RectangleShape2D_1")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -158.0
offset_top = -156.0
offset_right = -58.0
offset_bottom = -146.0
value = 100.0
metadata/_edit_use_anchors_ = true

[node name="WeakPoint" type="Area2D" parent="."]
position = Vector2(0, -40)
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeakPoint"]
position = Vector2(51, -26)
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_1")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="FirePoint" type="Marker2D" parent="."]
position = Vector2(-178, 16)

[connection signal="body_entered" from="WeakPoint" to="." method="_on_weak_point_body_entered"]
